recursion.cons.last.Last.scala.error
Erreur de compilation :
Last:6: error: type mismatch;
 found   : Int
 required: List[Int]
  return last(a-1)
               ^